--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
-
-<section class="bg-primary text-light text-center">
-  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr;">
-    <div class="txt" style="width: 100%; max-width: 600px; margin: 0 auto; display: flex; flex-direction: column; justify-content: center;">
+<section class="text-light text-center" style="background: linear-gradient(to right, #012B4D, #001626);">
+  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative;">
+    <div class="txt" style="width: 100%; max-width: 600px; margin: 0 auto; display: flex; flex-direction: column; justify-content: center; position: relative; z-index: 1;">
       <h2 class="mb-3">
         <span class="text-white" style="font-weight: bold;">Dive into Brazil’s fan scene with </span>
         <span style="color: #ffc107; font-family: 'Black Ops One', cursive;">Match Mate</span>
@@ -9,12 +8,10 @@
       <p class="small my-4" style="font-weight: 200;">
         Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
       </p>
-
-     <div class="d-flex align-items-center justify-content-center mb-3">
-  <button class="btn btn-google">Sign up</button>
-</div>
+      <div class="d-flex align-items-center justify-content-center mb-3">
+        <button class="btn btn-google">Sign up</button>
+      </div>
     </div>
-
     <div class="d-flex align-items-center justify-content-center">
       <img class="img-fluid" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: 100%; height: auto; max-height: 80vh; object-fit: cover;">
     </div>
