working on search function

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 </section>
 
 <!-- Search Team and Date -->
-<section class="text-newwhite pt-3 pb-1 section">
+<%# <section class="text-newwhite pt-3 pb-1 section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-3">
@@ -57,7 +57,7 @@
 
     </div>
   </div>
-</section>
+</section> %>
 
 <section>
   <div class="container">
