--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -167,3 +167,15 @@ body, h1, .container, .d-sm-flex {
   text-decoration: underline;
   color: map-get($theme-colors, newwhite) !important;
 }
+
+.btn-dark-blue {
+  background-color: #001626; /* Very dark blue */
+  color: #ffffff; /* White text */
+  border-color: #001626; /* Border color matches background color */
+
+  &:hover {
+    background-color: #ffc107; /* Warning yellow on hover */
+    border-color: #ffc107; /* Border color on hover matches background color */
+    color: #001626; /* Dark blue text on hover */
+  }
+}
