--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -57,7 +57,7 @@
       <% if user_signed_in? %>
         <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary' %>
       <% else %>
-        <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+        <%= link_to 'Login', new_user_session_path, class: 'btn btn-dark-blue' %>
       <% end %>
     </li>
     <li class="nav-item d-none d-lg-block">
