--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,8 +7,9 @@
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
 
-
+    <div class="profile-picture">
     <%= f.input :photo, as: :file %>
+    </div>
 
     <%= f.input :username, required: true %>
     <%= f.input :name, required: true %>
@@ -28,10 +29,13 @@
     <%= f.input :password_confirmation,
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
+
+
     <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+
   </div>
 
   <div class="form-actions">
