--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -14,15 +14,24 @@
 -->
   <h2>Hi, <%= @user.username %></h2>
 
+  <div class="user-profile-photo">
   <% if @user.photo.attached? %>
     <%= cl_image_tag @user.photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
+  </div>
 
   <p><%= @user.name %></p>
   <p>Email: <%= @user.email %></p>
   <p>Language: <%= @user.language %></p>
   <p>Favorite Team: <%= @user.favourite_team %></p>
   <p>Preferences: <%= @user.preferences %></p>
+
+<!--
+  <%= link_to "Edit Profile", edit_user_path(@user) %>
+-->
+  <%= link_to "Edit Profile", edit_user_registration_path %>
+
+  <%= link_to "Back", :back %>
 
 
   <!-- Add more information as needed -->
