--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,79 +22,58 @@ body, h1, .container, .d-sm-flex {
 @import "pages/index";
 @import 'components/user_profile';
 
-.btn-google {
+.btn-11 {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  appearance: none;
-  background-color: map-get($theme-colors, "info"); // Main button color
-  border-radius: 24px;
-  border-style: none;
-  box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
-  box-sizing: border-box;
-  color: map-get($theme-colors, "newwhite"); // Text color
-  cursor: pointer;
-  display: inline-flex;
-  fill: currentcolor;
-  font-family: "Google Sans", Roboto, Arial, sans-serif;
-  font-size: 16px;
+  padding: 6px 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
   font-weight: bold;
-  height: 48px;
-  justify-content: center;
-  letter-spacing: .25px;
-  line-height: normal;
-  max-width: 100%;
-  overflow: visible;
-  padding: 2px 24px;
-  position: relative;
-  text-align: center;
-  text-transform: none;
-  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  font-size: 20px;
+  border-radius: 6px;
+  color: map-get($theme-colors, "newwhite");
+  background: map-get($theme-colors, "info");
+  border: none;
+  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: auto;
-  will-change: transform, opacity;
-  z-index: 0;
+  cursor: pointer;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
 
   &:hover {
-    background: map-get($theme-colors, "warning"); // Hover color
-    color: #174ea6; // Text color on hover
+    background: map-get($theme-colors, "warning");
+    color: map-get($theme-colors, "primary");
   }
-}
 
-.btn {
-  &.btn-info {
-    background-color: rgba(map-get($theme-colors, "info"), 0.8);
-    color: #F2F3F4;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
-    font-family: 'Audiowide', sans-serif;
-    font-size: 1.4rem;
-    font-weight: bold;
+  &:focus {
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+    outline: 0;
   }
 }
 
 .btn-g2 {
   align-items: center;
   appearance: none;
-  background-color: map-get($theme-colors, "primary"); // Main button color
+  background-color: map-get($theme-colors, "warning");
   border-radius: 24px;
   border-style: none;
   box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
   box-sizing: border-box;
-  color: map-get($theme-colors, "newwhite"); // Text color
+  color: map-get($theme-colors, "primary");
   cursor: pointer;
   display: inline-flex;
   fill: currentcolor;
   font-family: "Google Sans", Roboto, Arial, sans-serif;
-  font-size: 14px; // Adjust the font size
+  font-size: 14px;
   font-weight: bold;
-  height: 40px; // Adjust the height
+  height: 40px;
   justify-content: center;
   letter-spacing: .25px;
   line-height: normal;
   max-width: 100%;
   overflow: visible;
-  padding: 2px 16px; // Adjust the padding
+  padding: 2px 16px;
   position: relative;
   text-align: center;
   text-transform: none;
@@ -107,33 +86,33 @@ body, h1, .container, .d-sm-flex {
   z-index: 0;
 
   &:hover {
-    background: map-get($theme-colors, "warning"); // Hover color
-    color: map-get($theme-colors, "primary"); // Text color on hover
+    background: map-get($theme-colors, "primary");
+    color: map-get($theme-colors, "warning");
   }
 }
 
 .btn-g3 {
   align-items: center;
   appearance: none;
-  background-color: map-get($theme-colors, "newwhite"); // Main button color
+  background-color: map-get($theme-colors, "primary");
   border-radius: 24px;
   border-style: none;
   box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
   box-sizing: border-box;
-  color: map-get($theme-colors, "primary"); // Text color
+  color: map-get($theme-colors, "newwhite");
   cursor: pointer;
   display: inline-flex;
   fill: currentcolor;
   font-family: "Google Sans", Roboto, Arial, sans-serif;
-  font-size: 14px; // Adjust the font size
+  font-size: 14px;
   font-weight: bold;
-  height: 40px; // Adjust the height
+  height: 40px;
   justify-content: center;
   letter-spacing: .25px;
   line-height: normal;
   max-width: 100%;
   overflow: visible;
-  padding: 2px 16px; // Adjust the padding
+  padding: 2px 16px;
   position: relative;
   text-align: center;
   text-transform: none;
@@ -146,8 +125,8 @@ body, h1, .container, .d-sm-flex {
   z-index: 0;
 
   &:hover {
-    background: map-get($theme-colors, "warning"); // Hover color
-    color: map-get($theme-colors, "primary"); // Text color on hover
+    background: map-get($theme-colors, "warning");
+    color: map-get($theme-colors, "primary");
   }
 }
 
@@ -178,4 +157,24 @@ body, h1, .container, .d-sm-flex {
     border-color: #ffc107; /* Border color on hover matches background color */
     color: #001626; /* Dark blue text on hover */
   }
+}
+
+.today-matches-section {
+  background-color: #F2F3F4;
+  padding: 20px;
+  border-radius: 0; /* Remove rounded border */
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: center; /* Center-align text */
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.today-matches-text {
+  color: #343a40; /* Dark color for the text */
+  font-size: 30px;
+  font-family: 'Black Ops One', cursive; /* Apply Black Ops One font */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  margin-bottom: 0;
 }
