--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,7 +11,7 @@
   <% @group.users.each do |user| %>
     <li>
       <%= user.name.presence || 'Unnamed User' %>
-      <% if current_user == @group.creator %>
+      <% if current_user == @group.creator && current_user != user %>
         <%= button_to 'Kick', kick_game_group_path(@group.game, @group, user_id: user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
     </li>
@@ -28,4 +28,4 @@
 <%= link_to 'Chatroom', game_group_chatroom_path(@game, @group, @chatroom) %>
 
 
-<%= link_to 'Back', game_group_path(@group.game, @group) %>
+<%= link_to 'Back', game_path(@group.game) %>
