--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -199,3 +199,60 @@ body {
 .today-matches-section {
   margin-top: 0;
 }
+
+.apple-form {
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+  .form-title {
+    text-align: center;
+    font-size: 24px;
+    color: map-get($theme-colors, primary) !important;
+    margin-bottom: 20px;
+  }
+
+  .form-inputs {
+    display: flex;
+    flex-direction: column;
+
+    .form-control {
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      color: map-get($theme-colors, primary) !important;
+
+      &:focus {
+        border-color: theme_color;
+        outline: none;
+        box-shadow: 0 0 5px rgba(theme_color, 0.5);
+      }
+    }
+  }
+
+  .form-actions {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+    .form-button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: theme_colormap-get($theme-colors, info) !important;;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: map-get($theme-colors, newwhite) !important;;
+      }
+    }
+  }
+}
