--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,22 @@
-<h2>Sign up</h2>
+<h2 class="form-title">Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'apple-form' }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-
-
-    <%= f.input :photo, as: :file %>
-
-    <%= f.input :username, required: true %>
-    <%= f.input :name, required: true %>
-    <%= f.input :language %>
-    <%= f.input :favourite_team %>
-    <%= f.input :preferences %>
-
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :photo, as: :file, input_html: { class: 'form-control' } %>
+    <%= f.input :username, required: true, input_html: { class: 'form-control' } %>
+    <%= f.input :name, required: true, input_html: { class: 'form-control' } %>
+    <%= f.input :language, input_html: { class: 'form-control' } %>
+    <%= f.input :favourite_team, input_html: { class: 'form-control' } %>
+    <%= f.input :preferences, input_html: { class: 'form-control' } %>
+    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email", class: 'form-control' } %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password", class: 'form-control' } %>
+    <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password", class: 'form-control' } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: "form-button" %>
   </div>
 <% end %>
 
