--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,24 @@
 <section class="text-light text-center" style="background: linear-gradient(to right, #012B4D, #001626); display: flex; flex-direction: column; align-items: center; justify-content: center; overflow: hidden;">
-  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative; max-width: 1200px; overflow: hidden; margin-top: -15px;">
-    <div class="txt" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 20px; position: relative; z-index: 1;">
-      <h2 class="mb-3" style="font-weight: bold; text-align: center;">
-        Dive into Brazil’s fan scene with
-        <span style="color: #ffc107; font-family: 'Black Ops One', cursive; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">
-          Match Mate
-        </span>
-      </h2>
+    <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; position: relative; max-width: 1200px; overflow: hidden; margin-top: -15px;">
+        <div class="txt" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start; padding: 20px; position: relative; z-index: 1;">
+            <h2 class="mb-3" style="font-weight: bold; text-align: left;">
+                Dive into Brazil’s fan scene with
+                <span style="color: #ffc107; font-family: 'Black Ops One', cursive; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">
+                    Match Mate
+                </span>
+            </h2>
 
-      <p class="small my-4" style="font-weight: 200; text-align: center;">
-        Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
-      </p>
-      <div class="d-flex align-items-center justify-content-center mb-3 text-center" style="width: 100%;">
-        <a href="<%= new_user_registration_path %>" class="btn btn-11">Sign up</a>
-      </div>
+            <p class="small my-4" style="font-weight: 200; text-align: left;">
+                Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
+            </p>
+            <div class="d-flex align-items-center justify-content-center mb-3 text-center" style="width: 100%;">
+                <a href="<%= new_user_registration_path %>" class="btn btn-11">Sign up</a>
+            </div>
+        </div>
+        <div class="d-flex align-items-start justify-content-start overflow-hidden" style="flex: 1; position: relative; margin-top: 5px; margin-bottom: 5px; height: calc(100% - 10px);">
+            <img class="img-fluid rounded" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: auto; height: 100%; object-fit: contain; margin: 0; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);">
+        </div>
     </div>
-    <div class="d-flex align-items-start justify-content-start overflow-hidden" style="flex: 1; position: relative; margin-top: 5px; margin-bottom: 5px; height: calc(100% - 10px);">
-      <img class="img-fluid rounded" src="https://i.imgur.com/cHGosIr.png" alt="Football supporters" style="width: auto; height: 100%; object-fit: contain; margin: 0; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);">
-    </div>
-  </div>
 </section>
 
 <!-- Search Team and Date -->
