--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,95 @@
-<h2 class="form-title">Sign up</h2>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: url('/assets/gramado.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'apple-form' }) do |f| %>
-  <%= f.error_notification %>
+  .card-container {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  <div class="form-inputs">
-    <%= f.input :photo, as: :file, input_html: { class: 'form-control' } %>
-    <%= f.input :username, required: true, input_html: { class: 'form-control' } %>
-    <%= f.input :name, required: true, input_html: { class: 'form-control' } %>
-    <%= f.input :language, input_html: { class: 'form-control' } %>
-    <%= f.input :favourite_team, input_html: { class: 'form-control' } %>
-    <%= f.input :preferences, input_html: { class: 'form-control' } %>
-    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email", class: 'form-control' } %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password", class: 'form-control' } %>
-    <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password", class: 'form-control' } %>
+  .card {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+  }
+
+
+ .form-title {
+    font-family: 'Black Ops One', sans-serif;
+    color: #012B4D;
+    font-size: 32px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  }
+
+  .apple-form {
+    text-align: left;
+
+    .form-control {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    .form-actions {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .btn-11 {
+      @import 'application';
+      display: block;
+      margin: 0 auto 20px;
+    }
+
+    .login-link {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+  }
+</style>
+
+
+<div class="card-container">
+  <div class="card">
+    <h2 class="form-title">Sign up</h2>
+
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'apple-form' }) do |f| %>
+      <%= f.error_notification %>
+
+      <%= f.input :photo, as: :file, input_html: { class: 'form-control' } %>
+      <%= f.input :username, required: true, input_html: { class: 'form-control' } %>
+      <%= f.input :name, required: true, input_html: { class: 'form-control' } %>
+      <%= f.input :language, input_html: { class: 'form-control' } %>
+      <%= f.input :favourite_team, input_html: { class: 'form-control' } %>
+      <%= f.input :preferences, input_html: { class: 'form-control' } %>
+      <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email", class: 'form-control' } %>
+      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password", class: 'form-control' } %>
+      <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password", class: 'form-control' } %>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up", class: "btn-11" %>
+      </div>
+    <% end %>
+
+    <div class="login-link">
+      Already signed up? <%= link_to 'Let\'s login', new_session_path(resource_name) %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: "form-button" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
