--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,102 @@
-<h2>Change your password</h2>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: url('https://img.freepik.com/fotos-gratis/bola-no-poste-no-campo-de-futebol_23-2147820710.jpg?w=1380&t=st=1701749106~exp=1701749706~hmac=bd48ca2532e31f182f844c2407d75052f3fa09764fdcf61fee7691f6e3598b4a');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+  }
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  .form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin-bottom: 0;
+  }
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+  .form-card {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 0;
+  }
 
-  <div class="form-inputs">
-    <%= f.input :password,
-                label: "New password",
-                required: true,
-                autofocus: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                label: "Confirm your new password",
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+  .form-title {
+    font-family: 'Black Ops One', sans-serif;
+    color: #012B4D;
+    font-size: 32px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  }
+
+  .apple-form {
+    text-align: left;
+
+    .form-control {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+
+    .form-actions {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .btn-11 {
+      @import 'application';
+      display: block;
+      margin: 0 auto 20px;
+    }
+
+    .login-link {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+  }
+</style>
+
+<div class="form-container">
+  <div class="form-card">
+    <h2 class="form-title">Change your password</h2>
+
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'apple-form' }) do |f| %>
+      <%= f.error_notification %>
+
+      <%= f.input :reset_password_token, as: :hidden %>
+      <%= f.full_error :reset_password_token %>
+
+      <div class="form-inputs">
+        <%= f.input :password,
+                    label: "New password",
+                    required: true,
+                    autofocus: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password", class: 'form-control' } %>
+        <%= f.input :password_confirmation,
+                    label: "Confirm your new password",
+                    required: true,
+                    input_html: { autocomplete: "new-password", class: 'form-control' } %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Change my password", class: 'btn-11' %>
+      </div>
+    <% end %>
+
+    <div class="login-link">
+      Already remembered your password? <%= link_to 'Log in here', new_session_path(resource_name) %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
