--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,15 +7,22 @@
     </div>
     <a href="<%= root_path %>" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
 
-    <div class="profile-picture me-2 d-lg-none">
-      <% if user_signed_in? && current_user.photo.attached? %>
-        <%= link_to profile_path do %>
-          <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
-        <% end %>
-      <% else %>
+<% if user_signed_in? %>
+  <% if current_user.photo.attached? %>
+    <%= link_to user_path(current_user) do %>
+      <div class="profile-picture me-2 d-lg-none">
+        <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle', style: 'cursor: pointer;' %>
+      </div>
+    <% end %>
+  <% else %>
+    <%= link_to user_path(current_user) do %>
+      <div class="profile-picture me-2 d-lg-none">
         <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
+  <% end %>
+<% end %>
+
 
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" style="background-color: #F2F3F4;">
       <span class="navbar-toggler-icon custom-toggler" style="border-color: #012B4D;"></span>
