--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,29 +1,69 @@
-<div class="user-profile">
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: url('/assets/gramado.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 
+  .user-profile-container {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-<!--
-  TESTE
-  <%= cl_image_tag("wf88lzxfa1dxstpsoued",
-      width: 400, height: 300, crop: :fill) %>
+  .user-profile-card {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+  }
 
-  <%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY",
-      width: 400, height: 300, crop: :fill) %>
+  .profile-title {
+    font-family: 'Black Ops One', sans-serif;
+    color: #012B4D;
+    font-size: 32px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  }
 
-  <%= cl_image_tag("IMAGE_WITH_FACE_ID",
-      width: 150, height: 150, crop: :thumb, gravity: :face) %>
--->
-  <h2>Hi, <%= @user.username %></h2>
+  .user-profile-form {
+    text-align: left;
 
-  <% if @user.photo.attached? %>
-    <%= cl_image_tag @user.photo.key, height: 300, width: 400, crop: :fill %>
-  <% end %>
+    .form-control {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 10px;
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
+  }
+</style>
 
-  <p><%= @user.name %></p>
-  <p>Email: <%= @user.email %></p>
-  <p>Language: <%= @user.language %></p>
-  <p>Favorite Team: <%= @user.favourite_team %></p>
-  <p>Preferences: <%= @user.preferences %></p>
+<div class="user-profile-container">
+  <div class="user-profile-card">
+    <h2 class="profile-title">User Profile</h2>
 
+    <div class="user-profile-form">
+      <h2>Hi, <%= @user.username %></h2>
 
-  <!-- Add more information as needed -->
+      <% if @user.photo.attached? %>
+        <%= cl_image_tag @user.photo.key, height: 300, width: 400, crop: :fill %>
+      <% end %>
+
+      <p><%= @user.name %></p>
+      <p>Email: <%= @user.email %></p>
+      <p>Language: <%= @user.language %></p>
+      <p>Favorite Team: <%= @user.favourite_team %></p>
+      <p>Preferences: <%= @user.preferences %></p>
+    </div>
+  </div>
 </div>
