--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,11 @@ body, h1, .container, .d-sm-flex {
 @import "pages/index";
 @import 'components/user_profile';
 
+#body{
+  background-color:#000;
+
+}
+
 .btn-11 {
   display: flex;
   flex-direction: column;
