--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap">
 
-<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
 
   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 
@@ -17,7 +17,7 @@
   <%= favicon_link_tag asset_path('logo.png') %>
 
 </head>
-<body>
+<body id='body'>
   <%= render "shared/navbar" %>
   <%= render "shared/flashes" %>
 
