--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,8 +1,9 @@
 <style>
   body {
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-    background-image: url('/assets/gramado.png');
+    background-image: url('https://f.i.uol.com.br/fotografia/2018/06/22/15296685875b2ce3ebd1265_1529668587_3x2_md.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
