--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,20 +1,11 @@
 <div style="padding: 20px;">
   <%# <h1 style="font-family: 'Black Ops One'; color: dark; padding: 20px;">Games</h1> %>
 
-  <div class="row justify-content-center">
-  <div class="col-sm-8 my-3">
-    <%= form_with url: games_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query,
-            params[:query],
-            class: "form-control",
-            placeholder: "Type a team name"
-        %>
-      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+
 </div>
 
-<%# <section class="text-newwhite pt-3 pb-1 section">
+
+<section class="text-newwhite pt-3 pb-1 section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-3">
@@ -22,43 +13,42 @@
           Find a match
         </h3>
       </div>
+
       <div class="col-md-3 text-center mb-3" style="padding-left: 10px;">
-        <label for="teamSelect" class="visually-hidden">Select Team</label>
-        <select class="form-select" id="teamSelect" aria-label="Select Team">
-          <option selected>Teams</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
+        <%= form_with url: games_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Type a City name"
+        %>
+        <%= text_field_tag :date,
+              params[:date],
+              class: "form-control",
+              data: { controller: "datepicker"} ,
+              placeholder: "Type a date name"
+            %>
+        <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+        <% end %>
       </div>
       <div class="col-md-3 text-center mb-3">
-        <input type="text" class="form-control" id="datePicker" placeholder="Select Date Range">
-      </div>
-      <div class="col-md-3 d-flex justify-content-between mb-3">
-        <div class="flex-grow-1 mr-2">
-          <label for="locationSelect" class="visually-hidden">Select Location</label>
-          <select class="form-select" id="locationSelect" aria-label="Select Location">
-            <option selected>Locations</option>
-            <option value="1">Location One</option>
-            <option value="2">Location Two</option>
-            <option value="3">Location Three</option>
-          </select>
-        </div>
-        <button class="btn btn-primary m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button>
-      </div>
 
+
+
+      </div>
     </div>
   </div>
-</section> %>
+    <%# <button class="btn btn-primary m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button> %>
+</section>
 
 <div class="row">
   <% if params[:query] %>
-    <% @games.map do |game| %>
+    <% @games.each do |game| %>
     <div class="col-sm-4">
         <div class="card bg-newwhite text-primary border-primary shadow m-3" style="border-radius: 15px; height: 200px; width: 100%;">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <p><%= "City/Location: #{game.searchable.city}" %></p>
-
+                <%= image_tag("#{@game.home_team.emblem}")%>
+            <p><%= "#{game.home_team.name} vs #{game.away_team.name}"%></p>
+            <p><%= "Location: #{game.city}, Date: #{game.date}"%></p>
             <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow"%></p>
             </div>
       </div>
