--- a/app/views/shared/_user_profile.html.erb
+++ b/app/views/shared/_user_profile.html.erb
@@ -1,18 +1,121 @@
 <style>
-  body { margin: 0; padding: 0; background-image: url('https://f.i.uol.com.br/fotografia/2018/06/22/15296685875b2ce3ebd1265_1529668587_3x2_md.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh; font-family: 'Black Ops One', sans-serif; color: #F5F5F5; height: 100vh; }
-  .user-profile-container { width: 100%; display: flex; justify-content: center; align-items: center; height: 90vh; margin-bottom: }
-  .user-profile-card { background-color: rgba(245, 245, 245, 0.9); padding: 20px; border-radius: 10px; text-align: left; max-width: 300px; width: 100%; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); margin-bottom: 2px; position: relative; }
-  .profile-heading-container { display: flex; justify-content: center; align-items: flex-start; width: 100%; margin-bottom: 20px; }
-  .profile-title { font-family: 'Black Ops One', sans-serif; color: #012B4D; font-size: 28px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin: 0; }
-  .edit-btn-container { position: absolute; top: 60px; right: 10px; z-index: 2; }
-  .edit-btn { color: #adb5bd; background-color: transparent; border: none; cursor: pointer; font-size: 0.8em; transition: background-color 0.3s, color 0.3s; }
-  .edit-btn:hover { background-color: #ced4da; color: #fff; }
-  .profile-picture-container { display: flex; justify-content: center; align-items: center; margin-top: 10px; position: relative; }
-  .profile-image { width: 200px; height: 200px; border-radius: 50%; object-fit: cover; }
-  .pencil-btn-container { display: flex; justify-content: flex-start; align-items: center; margin-top: 5px; }
-  .pencil-icon { font-size: 16px; margin-right: 5px; }
-  .user-profile-form { text-align: left; color: #343a40; font-family: 'Roboto', sans-serif; width: 100%; }
-  .form-control { width: 100%; margin-bottom: 15px; padding: 10px; border: none; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); border-radius: 5px; box-sizing: border-box; }
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: url('https://f.i.uol.com.br/fotografia/2018/06/22/15296685875b2ce3ebd1265_1529668587_3x2_md.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-family: 'Black Ops One', sans-serif;
+    color: #F5F5F5;
+    height: 100vh;
+  }
+
+  .user-profile-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    margin-bottom: 0;
+  }
+
+  .user-profile-card {
+    background-color: rgba(245, 245, 245, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+    max-width: 300px;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    margin-bottom: 2px;
+    position: relative;
+  }
+
+  .profile-heading-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .profile-title {
+    font-family: 'Black Ops One', sans-serif;
+    color: #012B4D;
+    font-size: 28px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0;
+  }
+
+  .edit-btn-container {
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    z-index: 2;
+  }
+
+  .edit-btn {
+    color: #adb5bd;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 0.8em;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .edit-btn:hover {
+    background-color: #ced4da;
+    color: #fff;
+  }
+
+  .profile-picture-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    position: relative;
+  }
+
+  .profile-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .pencil-btn-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 5px;
+  }
+
+  .pencil-icon {
+    font-size: 16px;
+    margin-right: 5px;
+  }
+
+  .user-profile-form {
+    text-align: left;
+    color: #343a40;
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+  }
+
+  .form-control {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 10px;
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
 </style>
 
 <div class="user-profile-container">
